--- a/Thesis.bib
+++ b/Thesis.bib
@@ -4637,6 +4637,20 @@ author = {R.L. Gl\"uckstern}
  year          = {2005}
 }
 
+@techreport{D'Hondt:926540,
+      author        = "D'Hondt, Jorgen and Lowette, Steven and Buchmüller, O L
+                       and Cucciarelli, Susanna and Schilling, Frank-Peter and
+                       Spiropulu, Maria and Paktinat-Mehdiabadi, S and Benedetti,
+                       Daniele and Pape, Luc",
+      title         = "{Fitting of Event Topologies with External Kinematic
+                       Constraints in CMS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-023",
+      month         = "Jan",
+      year          = "2006",
+}
+
 @unpublished{Collaboration:1429615,
       collaboration = "CMS",
       title        = "First high-energy collisions at 7\tev (30th March 2010)",
