--- a/Resolution.tex
+++ b/Resolution.tex
@@ -425,13 +425,14 @@ An event is considered as gluon splitting event, if one of the two leading jets 
 The following function, denoted \textit{NSC-function}, is used to fit the resolution in simulation
 \begin{equation}
 f(\pt) = \sqrt{\frac{N^2}{\pt^{2}} + \frac{S^2}{\pt} + C^2}
+\label{eq:NSC}
 \end{equation}
-with $\pt=\pt^{ave}$ and the free parameters N, S and C. This function is chosen in accordance to the parametrization typically used for the description of the relative energy-resolution in calorimeters~\cite{bib:PDG:2012}. At low momenta, the resolution is mainly dominated by electronic noise and pile-up described by the \textit{noise term} N. For increasing energies, the resolution is driven by fluctuations of the shower development described by the \textit{stochastic term} S. At high energies however, the resolution is eventually limited by calorimeter miscalibration and non-uniformities described by the \textit{constant term} C. If the data-to-simulation ratio is flat as function of $\pt^{ave}$ one expects to find one common scale factor $k_{NSC}$ for the N, S and C parameters to describe the data. Significant differences between data and the actual modelling of the detector behaviour consequently can result in the necessity to use individual scale factors for the $k_N$, $k_S$ and $k_C$ parameters in order to describe the data from the fit results of the function to the simulation. \\
+with $\pt=\pt^{ave}$ and the free parameters $N, S$ and $C$. This function is chosen in accordance to the parametrization typically used for the description of the relative energy-resolution in calorimeters~\cite{bib:PDG:2012}. At low momenta, the resolution is mainly dominated by electronic noise and pile-up described by the \textit{noise term} N. For increasing energies, the resolution is driven by fluctuations of the shower development described by the \textit{stochastic term} S. At high energies however, the resolution is eventually limited by calorimeter miscalibration and non-uniformities described by the \textit{constant term} $C$. If the data-to-simulation ratio is flat as function of $\pt^{ave}$ one expects to find one common scale factor $k_{NSC}$ for the $N$, $S$ and $C$ parameters to describe the data. Significant differences between data and the actual modelling of the detector behaviour consequently can result in the necessity to use individual scale factors for the $k_N$, $k_S$ and $k_C$ parameters in order to describe the data from the fit results of the function to the simulation. \\
 In order to test the assumption of a flat ratio the data points are fitted with the following function 
 \begin{equation}
 f(\pt) = \sqrt{\frac{(k_{NS} \cdot N)^2}{\pt^{2}} + \frac{(k_{NS} \cdot S)^2}{\pt} + (k_{C} \cdot C)^2} 
 \end{equation} 
-which uses one common scale factor for parameters N and S and another one for C. Since there are no events with low transverse momenta available, no sensitivity to the special characteristics of N is expected and hence no separate scale factor for N is defined. Furthermore this means, that this procedure can not be used to study influences from pile-up. For the determination of $k_{NS}$ and $k_{C}$ the parameters N, S and C are fixed to the results of the fit to the simulation. Some example fits for the two most central $|\eta|$ intervals are summarized in Fig.~\ref{fig:NSC_Fits_3}. It turns out that typically the scale factors $k_{NS}$ and $k_{C}$ are not equal and thus a shape different from a constant could describe the measured data-to-simulation ratios as function of \ptave as well. In order to illustrate how big this effect is, the ratio of the two fitted NSC-functions for data and simulation is shown together with the measured values and the constant fit in Fig.~\ref{fig:NSC_Fits_ratio}. It is visible that the ratio derived from the NSC-fits is also compatible with the measured values for the ratio. Consequently, a trend versus $\pt^{ave}$ could be hidden in the measured points. The difference of the measured scale factors $k_{NS}$ and $k_{C}$ to the central value of the measurement from the constant fit amounts to about $2\%$ in the two central $|\eta|$ intervals. This is considered as systematic uncertainty for all $|\eta|$ intervals in order to compensate for this potentially hidden shape in the data-to-simulation ratio. Furthermore, this also covers possible differences of the scaling factors for jets with very low or very high transverse momenta which can not be directly measured in this analysis. Overall, this systematic uncertainty constitutes the major contribution to the total systematic uncertainty.
+which uses one common scale factor for parameters $N a$nd $S$ and another one for $C$. Since there are no events with low transverse momenta available, no sensitivity to the special characteristics of N is expected and hence no separate scale factor for N is defined. Furthermore this means, that this procedure can not be used to study influences from pile-up. For the determination of $k_{NS}$ and $k_{C}$ the parameters N, S and C are fixed to the results of the fit to the simulation. Some example fits for the two most central $|\eta|$ intervals are summarized in Fig.~\ref{fig:NSC_Fits_3}. It turns out that typically the scale factors $k_{NS}$ and $k_{C}$ are not equal and thus a shape different from a constant could describe the measured data-to-simulation ratios as function of \ptave as well. In order to illustrate how big this effect is, the ratio of the two fitted NSC-functions for data and simulation is shown together with the measured values and the constant fit in Fig.~\ref{fig:NSC_Fits_ratio}. It is visible that the ratio derived from the NSC-fits is also compatible with the measured values for the ratio. Consequently, a trend versus $\pt^{ave}$ could be hidden in the measured points. The difference of the measured scale factors $k_{NS}$ and $k_{C}$ to the central value of the measurement from the constant fit amounts to about $2\%$ in the two central $|\eta|$ intervals. This is considered as systematic uncertainty for all $|\eta|$ intervals in order to compensate for this potentially hidden shape in the data-to-simulation ratio. Furthermore, this also covers possible differences of the scaling factors for jets with very low or very high transverse momenta which can not be directly measured in this analysis. Overall, this systematic uncertainty constitutes the major contribution to the total systematic uncertainty.
 
 \end{description}
 
