--- a/Stop.tex
+++ b/Stop.tex
@@ -458,5 +458,5 @@ Selections based on different kinematic properties of direct stop pair productio
 
 The selections illustrated there are baseline requirements plus at least one medium b-tagged jet (dark blue), baseline requirements and $m_T > 180$\gev (magenta), the selection following~\cite{CMS-PAS-SUS-13-015} discussed in Sec.~\ref{sec:stop_pub} (black) and the selection based on the baseline selection employing top tagging and $m_T > 180$\gev (light blue). The areas below the lines can be excluded. Consequently, for the blue selection stop masses up to 1\tev can be tested for LSP masses not exceeding 300\gev. \\
 In general, the conclusions found in previous sections hold true also for the two dimensional exclusion curves. The best sensitivity for a wide range of mass point configurations is achieved by the selection introduced in Sec.~\ref{sec:stop_cuts}. Although the selection following the already published analysis at $\sqrt{s} = 8$\tev is able to probe stop masses up to 700-800\gev also for other LSP masses than 50\gev, the sensitivity towards larger stop masses is not achieved. Consequently, these studies suggest that either the existing analysis has to be improved in order to test the whole stop mass range up to 1\tev or a search strategy as proposed in this chapter should be employed. \\
-However, when deciding on a particular analysis strategy for direct stop production at $\sqrt{s} = 13$\tev it has to be kept in mind that the studies presented here, are based on some simplifications.  The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:simulation}, no dedicated studies have been performed yet, if those holds true also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplified assumptions also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a still to be defined data-based background estimation procedure. \\
+However, when deciding on a particular analysis strategy for direct stop production at $\sqrt{s} = 13$\tev it has to be kept in mind that the studies presented here, are based on some simplifications.  The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:sim_detector}, no dedicated studies have been performed yet, if those holds true also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplified assumptions also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a still to be defined data-based background estimation procedure. \\
 Since though all those simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of various selections relative to each other should not be affected by this. Nevertheless, the absolute expected analysis reach might be better or worse by a few 10\gev than found in these studies. However, as discussed above most of the simplifications should have only a minor impact on the presented selections. Consequently, the expected data at $\sqrt{s} = 13$\tev supposably further shed light on the question of a realization of natural supersymmetry in data manifesting in top squarks below the \tev mass range. 
