--- a/Thesis.tex
+++ b/Thesis.tex
@@ -195,6 +195,9 @@ Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
 \chapter{Experimental Setup} \label{chap:Detector}
 \input{Detector.tex}
 
+\chapter{Event Simulation} \label{chap:Simulation}
+\input{Simulation.tex}
+
 \chapter{Object Reconstruction and Particle Identification} \label{chap:Objects}
 \input{Objects.tex}
 
