--- a/definitions.tex
+++ b/definitions.tex
@@ -242,7 +242,7 @@
 \newcommand{\prospino}{\textsc{Prospino}\xspace}
 \newcommand{\pythia}{\textsc{Pythia}\xspace}
 \newcommand{\herwig}{\textsc{Herwig++}\xspace}
-\newcommand{\geant}{\textsc{GEANT4}\xspace}
+\newcommand{\geant}{\textsc{Geant4}\xspace}
 \newcommand{\lvmini}{\textsc{LVMINI}\xspace}
 \newcommand{\minuit}{\textsc{MINUIT}\xspace}
 
